[gd_scene load_steps=6 format=3 uid="uid://co0irk735q1jr"]

[ext_resource type="Script" path="res://Resources/ItemDatabase/Objects/Furnace/furnace_menu.gd" id="1_7j5mj"]
[ext_resource type="PackedScene" uid="uid://xbb2psgt2l54" path="res://Scenes/UI/Inventory/inventory_slot.tscn" id="1_iheel"]
[ext_resource type="Texture2D" uid="uid://dey8l4xdl42cr" path="res://Sprites/objects/furnace.png" id="2_twm2s"]
[ext_resource type="PackedScene" uid="uid://dd7yt4j8a5qfv" path="res://Scenes/UI/health_bar.tscn" id="3_2uply"]

[sub_resource type="AtlasTexture" id="AtlasTexture_jmx23"]
atlas = ExtResource("2_twm2s")
region = Rect2(0, 0, 32, 48)

[node name="FurnaceMenu" type="Control" node_paths=PackedStringArray("input", "output", "fuel")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7j5mj")
input = NodePath("SmeltingItems/Control/Input")
output = NodePath("SmeltingItems/Control/Output")
fuel = NodePath("SmeltingItems/Fuel")

[node name="SubViewportContainer" type="SubViewportContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -48.0
offset_top = -100.0
offset_right = 48.0
offset_bottom = 44.0
grow_horizontal = 2
grow_vertical = 2
stretch = true
stretch_shrink = 3

[node name="SubViewport" type="SubViewport" parent="SubViewportContainer"]
transparent_bg = true
handle_input_locally = false
canvas_item_default_texture_filter = 0
size = Vector2i(32, 48)
render_target_update_mode = 4

[node name="TextureRect" type="TextureRect" parent="SubViewportContainer/SubViewport"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -16.0
offset_top = -24.0
offset_right = 16.0
offset_bottom = 24.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("AtlasTexture_jmx23")

[node name="SmeltingItems" type="Control" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -125.0
offset_top = 60.0
offset_right = 125.0
offset_bottom = 132.0
grow_horizontal = 2
grow_vertical = 2

[node name="Control" type="Control" parent="SmeltingItems"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 41.0
grow_horizontal = 2

[node name="Input" parent="SmeltingItems/Control" instance=ExtResource("1_iheel")]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -20.0
offset_right = 40.0
offset_bottom = 20.0
grow_vertical = 2

[node name="HealthBar" parent="SmeltingItems/Control" instance=ExtResource("3_2uply")]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0
anchor_right = 1.0
offset_left = 45.0
offset_top = -6.5
offset_right = -45.0
offset_bottom = 6.5
max_health = 100.0

[node name="Output" parent="SmeltingItems/Control" instance=ExtResource("1_iheel")]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -40.0
offset_top = -20.0
offset_right = 0.0
offset_bottom = 20.0
grow_horizontal = 0
grow_vertical = 2

[node name="Fuel" parent="SmeltingItems" instance=ExtResource("1_iheel")]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -40.0
offset_right = 20.0
offset_bottom = 0.0
grow_horizontal = 2
grow_vertical = 0

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
